[PPANTT-84] feat: updated model
