# openapi/openapi_external.json
@@ -496,7 +496,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/GetGenerationRequestStatusResource"
+                  "$ref" : "#/components/schemas/GetErrorResource"
                 }
               }
             },
@@ -1354,6 +1354,32 @@
           }
         },
         "description" : "Debtor data"
+      },
+      "GetErrorResource" : {
+        "type" : "object",
+        "properties" : {
+          "createdAt" : {
+            "type" : "string",
+            "description" : "error creation date",
+            "format" : "date-time"
+          },
+          "errorCode" : {
+            "type" : "string",
+            "description" : "code identifying the error"
+          },
+          "errorDescription" : {
+            "type" : "string",
+            "description" : "description of the specific error"
+          },
+          "errorId" : {
+            "type" : "string",
+            "description" : "id of the item inside the generation request producing the error"
+          },
+          "folderId" : {
+            "type" : "string",
+            "description" : "folder id of the massive generation request"
+          }
+        }
       },
       "GetGenerationRequestStatusResource" : {
         "required" : [ "noticesInError", "processedNotices", "status" ],
