# src/main/java/it/gov/pagopa/payment/notices/service/controller/NoticesController.java
@@ -337,7 +337,7 @@ public class NoticesController {
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
-                            schema = @Schema(implementation = GetGenerationRequestStatusResource.class))),
+                            schema = @Schema(implementation = GetErrorResource.class))),
             @ApiResponse(responseCode = "400", description = "Bad Request",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
                             schema = @Schema(implementation = ProblemJson.class))),
